[package]
name = "raw_identifiers"
version = "0.1.0"
authors = [ "Alex Payne <apayne@esri.com>" ]
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/rwf2/Rocket", default-features = false, features = [ "json" ] }
rocket_okapi = { path = "../../rocket-okapi", features = [ "rapidoc", "swagger" ] }
